# ESP32CameraIntegration

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
AprilTagBadgeReader/: CMakeLists.txt  README.md  run_cmake.sh  sdkconfig
AprilTagBadgeReader/freertos-configs/: FreeRTOSConfig.h
AprilTagBadgeReader/include/: abr_apriltags.h  abr_camera.h  abr_camera_wifi.h  abr_config.h  abr_display_image.h  abr_mqtt.h  abr_mqtt_init.h  abr_pin_map.h  abr_sntp.h
AprilTagBadgeReader/src/: CFtemplate.yml  abr_apriltags.c  abr_camera.c  abr_camera.h  abr_camera_wifi.c  abr_display_image.c  abr_main.c  abr_mqtt.c  abr_mqtt_init.c  abr_sntp.c  main.c
FaceID/: README.md
FaceID/M1/: README.md
FaceID/M1/spc-m1-sandbox/src/: App.vue
FaceID/M1/spc-m1-sandbox/src/components/: HelloWorld.vue
FaceID/M1/vueDataLabelling/: package-lock.json
FaceID/M1/vueDataLabelling/src/: App.vue
FaceID/M1/vueDataLabelling/src/assets/train_celebs/: ChrisE36.html
FaceID/M1/vueDataLabelling/src/assets/train_celebs/Captain/: desktop.ini
FaceID/M1/vueDataLabelling/src/assets/train_celebs/Charlie/: desktop.ini
FaceID/M1/vueDataLabelling/src/assets/train_celebs/Idris/: desktop.ini
FaceID/M1/vueDataLabelling/src/assets/train_celebs/Kim/: desktop.ini
FaceID/M1/vueDataLabelling/src/assets/train_celebs/MBJ/: desktop.ini
FaceID/M1/vueDataLabelling/src/assets/train_celebs/Rachel/: desktop.ini
FaceID/M1/vueDataLabelling/src/assets/train_celebs/Scar/: desktop.ini
FaceID/M1/vueDataLabelling/src/assets/train_celebs/Taraji/: desktop.ini
FaceID/M1/vueDataLabelling/src/assets/train_celebs/Thor/: desktop.ini
FaceID/M1/vueDataLabelling/src/assets/train_celebs/Zendaya/: desktop.ini
FaceID/M1/vueDataLabelling/src/components/: HelloWorld.vue  ImageLabeller.vue
FaceID/M2/: README.md  model_dynamic_quant_tflite
FaceID/M2/src/: Training_ESPEYE_TFModel.ipynb  training_espeye_tfmodel.py
FaceID/M3/: CMakeLists.txt
PickDetection/: CMakeLists.txt  README.md  build.sh
PickDetection/freertos-configs/: FreeRTOSConfig.h
PickDetection/include/: pickdet_camera.h  pickdet_http_display.h  pickdet_launcher.h  pickdet_motion.h  pickdet_mqtt.h  pickdet_timestamp.h  pickdet_wifi.h
PickDetection/src/: main.c  pickdet_camera.c  pickdet_http_display.c  pickdet_launcher.c  pickdet_main.c  pickdet_motion.c  pickdet_mqtt.c  pickdet_timestamp.c  pickdet_wifi.c
